[gd_scene load_steps=7 format=3 uid="uid://bb52xx0oi1pkc"]

[ext_resource type="Script" uid="uid://d4m3qcid4iltn" path="res://scripts/components/balls/banana_ball.gd" id="1_6w3xg"]
[ext_resource type="Texture2D" uid="uid://1ghbd8r5gklq" path="res://assets/textures/balls/banana_ball.png" id="2_mt4lr"]
[ext_resource type="AudioStream" uid="uid://c2ueq12grpul3" path="res://assets/audio/banana_wall_hit.ogg" id="3_hef1k"]
[ext_resource type="AudioStream" uid="uid://qnh5hdpshdn0" path="res://assets/audio/paddle_hit.ogg" id="4_3r7fx"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_c3m63"]
friction = 0.0
bounce = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqj0q"]
radius = 48.0
height = 176.0

[node name="BananaBall" type="RigidBody2D" groups=["balls"]]
collision_layer = 2
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_c3m63")
continuous_cd = 1
max_contacts_reported = 1
contact_monitor = true
linear_velocity = Vector2(353.553, 353.553)
angular_velocity = 10.0
script = ExtResource("1_6w3xg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_dqj0q")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_mt4lr")

[node name="WallAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hef1k")
volume_db = -4.0

[node name="PaddleAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3r7fx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
